--- a/src/styles/components/technologiescontainer.sass
+++ b/src/styles/components/technologiescontainer.sass
@@ -58,3 +58,21 @@
         #ts
             svg
                 color:#3178c6
+        #react-router
+            svg
+                color:#f44250
+        #tailwind
+            svg
+                color:#38bdf8
+        #styled
+            svg
+                color:#98613b
+        #sass
+            svg
+                color:#bf4080
+        #pg
+            svg
+                color:#31648c
+        #express
+            svg
+                color:#fff
