--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -15,7 +15,7 @@
         @include mixins.center
         justify-content: start
         gap: 1rem
-        padding: .8rem
+        padding: .8rem 0
         margin-bottom: .8rem
         border-bottom: 1px solid #444
         width: 100%
@@ -40,8 +40,7 @@
         color: #e93b81
 
     #email-icon
-        color:#c17ceb
-        
+        color:#c17ceb        
 
     #pin-icon
         color: #6ab5b9
