update text styles

--- a/src/styles/components/projects.sass
+++ b/src/styles/components/projects.sass
@@ -23,6 +23,7 @@
         
         li
             line-height: 1.5rem
+            margin-bottom: .4rem
         
         .git-page
             padding: 1rem 0
